--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Velvet Walrus
 
 # Short bio or description (displayed in the header)
-description: Web Developer from the Earth
+description: Explorer from the Earth
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
